--- a/crazyswarm/ros_ws/src/crazyswarm/CMakeLists.txt
+++ b/crazyswarm/ros_ws/src/crazyswarm/CMakeLists.txt
@@ -4,7 +4,7 @@ project(crazyswarm)
 
 # On 64-bit Linux we can enable optitrack_closed_source
 if(CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL x86_64 OR CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL amd64)
-  option(LIBMOTIONCAPTURE_ENABLE_OPTITRACK_CLOSED_SOURCE "Enable optitrack closed source" ON)
+  option(LIBMOTIONCAPTURE_ENABLE_OPTITRACK_CLOSED_SOURCE "Enable optitrack closed source" OFF)
 endif()
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externalDependencies/libmotioncapture EXCLUDE_FROM_ALL)
 
