--- a/crazyswarm/ros_ws/src/crazyswarm/launch/allCrazyflies.yaml
+++ b/crazyswarm/ros_ws/src/crazyswarm/launch/allCrazyflies.yaml
@@ -1,35 +1,67 @@
 crazyflies:
   - id: 1
     channel: 1
-    initialPosition: [1.0, 1.0, 0.0]
+    initialPosition: [0.0, 0.0, 0.0]
     type: defaultSingleMarker
+
   - id: 2
     channel: 1
-    initialPosition: [1.0,  0.0, 0.0]
+    initialPosition: [0.6,  0.0, 0.0]
     type: defaultSingleMarker
+
   - id: 3
     channel: 1
-    initialPosition: [1.0,-1.0 , 0.0]
+    initialPosition: [0.6,-0.6 , 0.0]
     type: defaultSingleMarker
+
   - id: 4
     channel: 1
-    initialPosition: [0.0, -1.0 , -0.02]
+    initialPosition: [0.0, -0.6 , -0.02]
     type: defaultSingleMarker
+
   - id: 5
     channel: 5
-    initialPosition: [-1.0, -1.0, 0.0]
+    initialPosition: [-0.6, -0.6, 0.0]
     type: defaultSingleMarker
+
   - id: 6
     channel: 5
-    initialPosition: [-1.0, 0.0 , 0.0]
+    initialPosition: [-0.6, 0.0 , 0.0]
     type: defaultSingleMarker
+
   - id: 7
     channel: 5
-    initialPosition: [-1.0,1.0, 0.0]
+    initialPosition: [-0.6,0.6, 0.0]
     type: defaultSingleMarker
+
   - id: 8
     channel: 5
-    initialPosition: [0.0, 1.0, 0.0]
+    initialPosition: [0.0, 0.6, 0.0]
+    type: defaultSingleMarker
+
+  - id: 9
+    channel: 6
+    initialPosition: [0.6, 0.6, 0.0]
+    type: defaultSingleMarker
+
+  - id: 10
+    channel: 6
+    initialPosition: [1.2, 0.6, 0.0]
+    type: defaultSingleMarker
+
+  - id: 11
+    channel: 6
+    initialPosition: [1.2, 0.0, 0.0]
+    type: defaultSingleMarker
+
+  - id: 12
+    channel: 6
+    initialPosition: [1.2, -0.6, 0.0]
+    type: defaultSingleMarker
+    
+  - id: 13
+    channel: 6
+    initialPosition: [1.2, -1.2, 0.0]
     type: defaultSingleMarker
   # - id: 1
   #   channel: 1
@@ -64,36 +96,4 @@ crazyflies:
   #   initialPosition: [1.2, 0.6 , 0.0]
   #   type: defaultSingleMarker
 
-  # - id: 1
-  #   channel: 1
-  #   initialPosition: [-2.4, -0.3, 0.0]
-  #   type: defaultSingleMarker
-  # - id: 2
-  #   channel: 1
-  #   initialPosition: [-2.4, 0.3, 0.0]
-  #   type: defaultSingleMarker
-  # - id: 3
-  #   channel: 1
-  #   initialPosition: [-2.4, 0.9, 0.0]
-  #   type: defaultSingleMarker
-  # - id: 4
-  #   channel: 1
-  #   initialPosition: [-3.0, 0.3 , -0.02]
-  #   type: defaultSingleMarker
-  # - id: 5
-  #   channel: 5
-  #   initialPosition: [-3.0,-0.3, 0.0]
-  #   type: defaultSingleMarker
-  # - id: 6
-  #   channel: 5
-  #   initialPosition: [-3.0,0.9, 0.0]
-  #   type: defaultSingleMarker
-  # - id: 7
-  #   channel: 5
-  #   initialPosition: [-3.6, 0.0 , 0.0]
-  #   type: defaultSingleMarker
-  # - id: 8
-  #   channel: 5
-  #   initialPosition: [-3.6, 0.6 , 0.0]
-  #   type: defaultSingleMarker
 
